# xh_train

./: .gitignore  README.md  pyproject.toml
config/: extension.toml
model/xh_urdf/meshes/: FL_calf.STL  FL_foot.STL  FR_calf.STL  FR_foot.STL  RL_calf.STL  RL_foot.STL  RR_calf.STL  RR_foot.STL
model/xh_urdf/urdf/: xh.urdf  xh7.csv
rl_training/: setup.py
rl_training/config/: extension.toml
rl_training/rl_training/: __init__.py
rl_training/rl_training.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rl_training/rl_training/assets/: __init__.py  xh.py
rl_training/rl_training/tasks/: __init__.py
rl_training/rl_training/tasks/manager_based/: __init__.py
rl_training/rl_training/tasks/manager_based/locomotion/: __init__.py
rl_training/rl_training/tasks/manager_based/locomotion/velocity/: __init__.py  velocity_env_cfg.py
rl_training/rl_training/tasks/manager_based/locomotion/velocity/config/quadruped/: __init__.py
rl_training/rl_training/tasks/manager_based/locomotion/velocity/config/quadruped/deeprobotics_xh/: __init__.py  flat_env_cfg.py  rough_env_cfg.py
rl_training/rl_training/tasks/manager_based/locomotion/velocity/config/quadruped/xh/: __init__.py  flat_env_cfg.py  rough_env_cfg.py
rl_training/rl_training/tasks/manager_based/locomotion/velocity/mdp/: __init__.py  commands.py  curriculums.py  events.py  observations.py  rewards.py
scripts/: cli_args.py  play.py  rl_utils.py  train.py
scripts/tools/: auto_tune_xh.py  convert_xh_urdf.py  list_envs.py  verify_xh_height.py  visualize_xh_joints.py
(+3 files in other folders)
